[tool.poetry]
name = "athina-logger"
version = "0.0.15"
description = ""
authors = ["Akshat Gupta <akshat@athina.ai>", "Shiv Sakhuja <shiv@athina.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
openai = "*"
langchain = ">=0.0.350"
retrying = "^1.3.4"
tiktoken = "^0.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
