[tool.poetry]
name = "athina-logger"
version = "1.2.8"
description = ""
authors = ["Akshat Gupta <akshat@athina.ai>", "Shiv Sakhuja <shiv@athina.ai>", "Akhil Bisht <akhil@athina.ai>", "Vivek Aditya <vivek@athina.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
openai = "*"
langchain = ">=0.0.350"
retrying = "^1.3.4"
tiktoken = "^0.7.0"
pydantic = "^2.4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
